prometheus/prometheus-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: ingress-nginx
  labels:
    app: prometheus-server
spec:
  selector:
    app: prometheus-server
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
      nodePort: 30321
  type: NodePort
