prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: devops-interview.prometheus.local
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-service
          servicePort: 9090
